<resources>
    <string name="app_name">Exchange Benefits</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="terms">By signing up you agree to our <b><u>Terms of Services</u></b> &amp; <b><u>Privacy Policy</u></b>.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut dolore minus, neque numquam voluptate.</string>
    <string name="don_t_have_account_create_now">Don\'t have Account? <font color="#957fef">Create Now</font></string>
    <string name="already_have_account_login">Already have Account? <font color="#957fef">Login</font></string>
    <string name="enter_amount_of_the_contract">Enter amount of the contract</string>
    <string name="amount">Amount</string>
    <string name="complete">Complete</string>
    <string name="sending_money_to_home">Sending Money to Home</string>
    <string name="rate_your_experience_with_this_user">Rate your experience with this user</string>
    <string name="rate">Rate</string>
    <string name="edit_bid">Edit Bid</string>
    <string name="please_wait">Please Wait</string>
    <string name="manage_your_bids">Manage Your Bids</string>
    <string name="no_bid_found">No Bid Found</string>
    <string name="good_morning">Good Morning</string>
    <string name="place_nbid">Place\nBid</string>
    <string name="view_nbids">View\nBids</string>
    <string name="my_nbids">My\nBids</string>
    <string name="my_nchats">My\nChats</string>
    <string name="currency_rates">Currency Rates</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="history_is_empty">History is Empty</string>
    <string name="stay_in_touch">Stay in-Touch</string>
    <string name="accept_bid">Accept Bid</string>
    <string name="rating">Rating:</string>
    <string name="chat">Chat</string>
    <string name="available_bank">Available Bank</string>
    <string name="your_secure_and_hassle_free_way_to_send_money_instantly_start_sending_funds_with_confidence">Your secure and hassle-free way to send money instantly. Start sending funds with confidence.</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="embark_on_a_seamless_financial_journey">Embark on a seamless financial journey!</string>
    <string name="unlock_the_power_to_send_money_effortlessly_anytime_anywhere">Unlock the power to send money effortlessly, anytime, anywhere.</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_amp_support">Help &amp; Support</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="bid_place_in_country">Bid Place In Country</string>
    <string name="amount_in_your_currency">Amount in your currency</string>
    <string name="your_amount">Your Amount</string>
    <string name="amount_in_bid_currency">Amount in Bid Currency</string>
    <string name="your_preference">Your Preference</string>
    <string name="transfer_by_bank">Transfer By Bank</string>
    <string name="meet_face_to_face">Meet Face-to-Face</string>
    <string name="place_bid">Place Bid</string>
    <string name="filter_bids_by_country">Filter bids by country</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="ready_to_dive_into_hassle_free_transactions">Ready to dive into hassle-free transactions?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_your_password">Forgot Your Password??</string>
    <string name="reset_your_exchange_benefits_password_effortlessly_and_regain_control_of_your_secure_swift_and_stress_free_money_transactions">Reset your Exchange Benefits password effortlessly and regain control of your secure, swift, and stress-free money transactions</string>
    <string name="reset">Reset</string>
    <string name="message">Message...</string>
    <string name="update_bid">Update Bid</string>
    <string name="currency_rates_for">Currency Rates for</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="chat_not_available_yet">Chat not available yet</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="you_can_now_start_conversation_with_this_user">You can now start conversation with this user</string>
    <string name="edit_your_bid">Edit Your Bid</string>
    <string name="delete_bid">Delete Bid</string>
    <string name="do_you_really_want_to_delete_this_bid">Do you really want to delete this bid?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_price_in_your_currency">Enter price in your currency</string>
    <string name="bid_deleted">Bid Deleted</string>
    <string name="your_bid_is_updated">Your Bid is Updated</string>
    <string name="no_chat_available">No Chat Available</string>
    <string name="your_rate_is_counted_thanks_for_your_feedback">Your rate is counted Thanks for your feedback!</string>
    <string name="transaction_completed">Transaction Completed!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="failed_to_get_the_image">Failed to get the image</string>
    <string name="dismiss">Dismiss</string>
    <string name="a_password_reset_link_is_sent_to_your_email">A Password Reset link is sent to your Email</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="find_your_bid">Find Your Bid</string>
    <string name="place_your_bid">Place Your Bid</string>
    <string name="your_bid_is_placed">Your Bid is Placed</string>
    <string name="setting">Setting</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="phone_number_is_empty">Phone Number is empty</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="language">Language</string>
    <string name="choose">Choose</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="amount_in">Amount in</string>
</resources>