<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.BidEditActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:text="@string/select_your_country" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="false"
                app:ccp_defaultNameCode="ae"
                app:ccp_showNameCode="false"
                app:ccp_showFullName="true"
                app:ccp_showPhoneCode="false"
                android:padding="5dp"
                app:ccpDialog_showPhoneCode="false"
                app:ccp_contentColor="@color/white"
                app:ccpDialog_background="@drawable/text_bg"
                app:ccpDialog_textColor="@color/white"
                app:ccpDialog_showCloseIcon="true"
                android:background="@drawable/text_bg"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:text="@string/bid_place_in_country" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="false"
                app:ccp_defaultNameCode="eg"
                app:ccp_showNameCode="false"
                app:ccp_showFullName="true"
                app:ccp_showPhoneCode="false"
                android:padding="5dp"
                app:ccpDialog_showPhoneCode="false"
                app:ccp_contentColor="@color/white"
                app:ccpDialog_background="@drawable/text_bg"
                app:ccpDialog_textColor="@color/white"
                app:ccpDialog_showCloseIcon="true"
                android:background="@drawable/text_bg"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxBackgroundColor="@color/second"
                app:helperText="@string/amount_in_your_currency"
                app:helperTextTextColor="@color/text"
                app:hintTextColor="@color/text"
                android:textColorHint="@color/text"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:hint="@string/your_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bidAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxBackgroundColor="@color/second"
                app:helperTextTextColor="@color/text"
                app:helperText="@string/amount_in_bid_currency"
                app:hintTextColor="@color/text"
                android:textColorHint="@color/text"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:hint="@string/amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:clickable="false"
                    android:textColor="@color/white"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:text="@string/your_preference" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/transfer"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/transfer_by_bank"
                    app:chipCornerRadius="12dp"
                    app:chipStartPadding="12dp"
                    app:chipEndPadding="12dp"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/faceToFace"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:checked="false"
                    app:chipCornerRadius="12dp"
                    app:chipStartPadding="12dp"
                    app:chipEndPadding="12dp"
                    android:text="@string/meet_face_to_face"
                    android:textSize="16sp" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="12dp"
                android:padding="12dp"
                app:backgroundTint="@color/light"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:text="@string/update_bid" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>