<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="26dp"
    android:layout_margin="15dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="26dp">

    <TextView
        android:id="@+id/tv_nav_yourEmail"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:text="@string/enter_amount_of_the_contract" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            app:boxBackgroundColor="@color/second"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/text"
            android:textColorHint="@color/text"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:backgroundTint="@color/second"
            android:layout_marginTop="6dp"
            android:text="@string/complete"
            android:textSize="18sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>